[tool.poetry]
name = "kaggle-english-prof-prediction"
version = "0.1.0"
description = "Gold-medal award notebook for the English Language Learning competition on Kaggle"
authors = ["Andrea D'Agostino"]
readme = "README.md"
packages = [{include = "kaggle_english_prof_prediction"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
matplotlib = "^3.7.1"
sentence-transformers = "^2.2.2"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
